adjusting dockerfile and gitignore