@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:8-jre-alpine
 MAINTAINER Thiago Oliveira <pintowar@gmail.com>
 
 RUN mkdir -p /opt/pbf
@@ -12,4 +12,4 @@ ENV GRAPH_OSM_PATH /opt/pbf/belgium-latest.osm.pbf
 
 EXPOSE 8080
 ADD app.jar /opt/app.jar
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /opt/app.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom -jar /opt/app.jar" ]
